--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.4",
+        "phpoffice/phpexcel": "^1.8",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "7.0.*",
         "symfony/asset-mapper": "7.0.*",
